parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ARRAY
    BOOL
    COMMENT
    DECLARE
    LEFT_CUR_PAR
    LEFT_SQ_PAR
    MOD
    NULL
    OF
    POW
    REVERSE
    RIGHT_CUR_PAR
    RIGHT_SQ_PAR
    XOR

Grammar

Rule 0     S' -> prog
Rule 1     empty -> <empty>
Rule 2     prog -> subprogram
Rule 3     prog -> headers subprogram
Rule 4     headers -> headers header
Rule 5     headers -> header
Rule 6     header -> WITH pkg SEMICOLON
Rule 7     header -> WITH pkg SEMICOLON USE pkg SEMICOLON
Rule 8     pkg -> pkg DOT IDENT
Rule 9     pkg -> IDENT
Rule 10    subprogram -> procedure
Rule 11    subprogram -> function
Rule 12    function -> FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
Rule 13    function_call -> IDENT LEFT_PAR value RIGHT_PAR
Rule 14    procedure -> PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON
Rule 15    args_opt -> LEFT_PAR args RIGHT_PAR
Rule 16    args_opt -> empty
Rule 17    args -> args COMMA arg
Rule 18    args -> arg
Rule 19    arg -> IDENT COLON type
Rule 20    type -> TYPE_INT
Rule 21    type -> TYPE_FLOAT
Rule 22    type -> TYPE_BOOL
Rule 23    declarations -> declarations declaration
Rule 24    declarations -> declaration
Rule 25    declaration -> empty
Rule 26    declaration -> function
Rule 27    declaration -> procedure
Rule 28    declaration -> IDENT COLON type ASSIGN value SEMICOLON
Rule 29    value -> expr
Rule 30    value -> bool_expr
Rule 31    expr -> expr PLUS term
Rule 32    expr -> expr MINUS term
Rule 33    expr -> term
Rule 34    term -> term MUL factor
Rule 35    term -> term DIV factor
Rule 36    term -> factor
Rule 37    factor -> LEFT_PAR expr RIGHT_PAR
Rule 38    factor -> function_call
Rule 39    factor -> IDENT
Rule 40    factor -> NUMBER
Rule 41    bool_expr -> bool_term AND bool_term
Rule 42    bool_expr -> bool_term OR bool_term
Rule 43    bool_expr -> bool_term
Rule 44    bool_term -> NOT bool
Rule 45    bool_term -> bool
Rule 46    bool -> LEFT_PAR bool_expr RIGHT_PAR
Rule 47    bool -> BOOL_VAL
Rule 48    bool -> IDENT
Rule 49    bool -> rel_operand rel_operator rel_operand
Rule 50    rel_operand -> NUMBER
Rule 51    rel_operand -> IDENT
Rule 52    rel_operator -> EQUALS
Rule 53    rel_operator -> NOT_EQUALS
Rule 54    rel_operator -> GREATER
Rule 55    rel_operator -> LESS
Rule 56    rel_operator -> GTEQ
Rule 57    rel_operator -> LSEQ
Rule 58    statements -> statements statement
Rule 59    statements -> statement
Rule 60    statement -> assign
Rule 61    statement -> if
Rule 62    statement -> loop
Rule 63    statement -> put_line
Rule 64    statement -> function_call SEMICOLON
Rule 65    ret_statements -> ret_statements ret_statement
Rule 66    ret_statements -> ret_statement
Rule 67    ret_statement -> statement
Rule 68    ret_statement -> RETURN value SEMICOLON
Rule 69    assign -> IDENT ASSIGN value SEMICOLON
Rule 70    if -> IF bool_expr THEN ret_statements elsifs else END IF SEMICOLON
Rule 71    elsifs -> elsifs elsif
Rule 72    elsifs -> empty
Rule 73    elsif -> ELSIF bool_expr THEN ret_statements
Rule 74    else -> ELSE ret_statements
Rule 75    else -> empty
Rule 76    loop -> loop_body
Rule 77    loop -> for_range loop_body
Rule 78    loop -> while loop_body
Rule 79    loop_body -> LOOP statements END LOOP SEMICOLON
Rule 80    for_range -> FOR IDENT IN expr DUB_DOT expr
Rule 81    while -> WHILE bool_expr
Rule 82    put_line -> PUT_LINE LEFT_PAR str_expr RIGHT_PAR SEMICOLON
Rule 83    str_expr -> str_expr AMPERSAND str_term
Rule 84    str_expr -> str_term
Rule 85    str_term -> STRING
Rule 86    str_term -> type APOSTROPHE IMAGE LEFT_PAR value RIGHT_PAR

Terminals, with rules where they appear

ABS                  : 
AMPERSAND            : 83
AND                  : 41
APOSTROPHE           : 86
ARRAY                : 
ASSIGN               : 28 69
BEGIN                : 12 14
BOOL                 : 
BOOL_VAL             : 47
COLON                : 19 28
COMMA                : 17
COMMENT              : 
DECLARE              : 
DIV                  : 35
DOT                  : 8
DUB_DOT              : 80
ELSE                 : 74
ELSIF                : 73
END                  : 12 14 70 79
EQUALS               : 52
FOR                  : 80
FUNC                 : 12
GREATER              : 54
GTEQ                 : 56
IDENT                : 8 9 12 12 13 14 14 19 28 39 48 51 69 80
IF                   : 70 70
IMAGE                : 86
IN                   : 80
IS                   : 12 14
LEFT_CUR_PAR         : 
LEFT_PAR             : 13 15 37 46 82 86
LEFT_SQ_PAR          : 
LESS                 : 55
LOOP                 : 79 79
LSEQ                 : 57
MINUS                : 32
MOD                  : 
MUL                  : 34
NOT                  : 44
NOT_EQUALS           : 53
NULL                 : 
NUMBER               : 40 50
OF                   : 
OR                   : 42
PLUS                 : 31
POW                  : 
PROC                 : 14
PUT_LINE             : 82
RETURN               : 12 68
REVERSE              : 
RIGHT_CUR_PAR        : 
RIGHT_PAR            : 13 15 37 46 82 86
RIGHT_SQ_PAR         : 
SEMICOLON            : 6 7 7 12 14 28 64 68 69 70 79 82
STRING               : 85
THEN                 : 70 73
TYPE_BOOL            : 22
TYPE_FLOAT           : 21
TYPE_INT             : 20
USE                  : 7
WHILE                : 81
WITH                 : 6 7
XOR                  : 
error                : 

Nonterminals, with rules where they appear

arg                  : 17 18
args                 : 15 17
args_opt             : 12 14
assign               : 60
bool                 : 44 45
bool_expr            : 30 46 70 73 81
bool_term            : 41 41 42 42 43
declaration          : 23 24
declarations         : 12 14 23
else                 : 70
elsif                : 71
elsifs               : 70 71
empty                : 16 25 72 75
expr                 : 29 31 32 37 80 80
factor               : 34 35 36
for_range            : 77
function             : 11 26
function_call        : 38 64
header               : 4 5
headers              : 3 4
if                   : 61
loop                 : 62
loop_body            : 76 77 78
pkg                  : 6 7 7 8
procedure            : 10 27
prog                 : 0
put_line             : 63
rel_operand          : 49 49
rel_operator         : 49
ret_statement        : 65 66
ret_statements       : 12 65 70 73 74
statement            : 58 59 67
statements           : 14 58 79
str_expr             : 82 83
str_term             : 83 84
subprogram           : 2 3
term                 : 31 32 33 34 35
type                 : 12 19 28 86
value                : 13 28 68 69 86
while                : 78

Parsing method: LALR

state 0

    (0) S' -> . prog
    (2) prog -> . subprogram
    (3) prog -> . headers subprogram
    (10) subprogram -> . procedure
    (11) subprogram -> . function
    (4) headers -> . headers header
    (5) headers -> . header
    (14) procedure -> . PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON
    (12) function -> . FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (6) header -> . WITH pkg SEMICOLON
    (7) header -> . WITH pkg SEMICOLON USE pkg SEMICOLON

    PROC            shift and go to state 7
    FUNC            shift and go to state 8
    WITH            shift and go to state 9

    prog                           shift and go to state 1
    subprogram                     shift and go to state 2
    headers                        shift and go to state 3
    procedure                      shift and go to state 4
    function                       shift and go to state 5
    header                         shift and go to state 6

state 1

    (0) S' -> prog .



state 2

    (2) prog -> subprogram .

    $end            reduce using rule 2 (prog -> subprogram .)


state 3

    (3) prog -> headers . subprogram
    (4) headers -> headers . header
    (10) subprogram -> . procedure
    (11) subprogram -> . function
    (6) header -> . WITH pkg SEMICOLON
    (7) header -> . WITH pkg SEMICOLON USE pkg SEMICOLON
    (14) procedure -> . PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON
    (12) function -> . FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON

    WITH            shift and go to state 9
    PROC            shift and go to state 7
    FUNC            shift and go to state 8

    subprogram                     shift and go to state 10
    header                         shift and go to state 11
    procedure                      shift and go to state 4
    function                       shift and go to state 5

state 4

    (10) subprogram -> procedure .

    $end            reduce using rule 10 (subprogram -> procedure .)


state 5

    (11) subprogram -> function .

    $end            reduce using rule 11 (subprogram -> function .)


state 6

    (5) headers -> header .

    WITH            reduce using rule 5 (headers -> header .)
    PROC            reduce using rule 5 (headers -> header .)
    FUNC            reduce using rule 5 (headers -> header .)


state 7

    (14) procedure -> PROC . IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON

    IDENT           shift and go to state 12


state 8

    (12) function -> FUNC . IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON

    IDENT           shift and go to state 13


state 9

    (6) header -> WITH . pkg SEMICOLON
    (7) header -> WITH . pkg SEMICOLON USE pkg SEMICOLON
    (8) pkg -> . pkg DOT IDENT
    (9) pkg -> . IDENT

    IDENT           shift and go to state 15

    pkg                            shift and go to state 14

state 10

    (3) prog -> headers subprogram .

    $end            reduce using rule 3 (prog -> headers subprogram .)


state 11

    (4) headers -> headers header .

    WITH            reduce using rule 4 (headers -> headers header .)
    PROC            reduce using rule 4 (headers -> headers header .)
    FUNC            reduce using rule 4 (headers -> headers header .)


state 12

    (14) procedure -> PROC IDENT . args_opt IS declarations BEGIN statements END IDENT SEMICOLON
    (15) args_opt -> . LEFT_PAR args RIGHT_PAR
    (16) args_opt -> . empty
    (1) empty -> .

    LEFT_PAR        shift and go to state 17
    IS              reduce using rule 1 (empty -> .)

    args_opt                       shift and go to state 16
    empty                          shift and go to state 18

state 13

    (12) function -> FUNC IDENT . args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (15) args_opt -> . LEFT_PAR args RIGHT_PAR
    (16) args_opt -> . empty
    (1) empty -> .

    LEFT_PAR        shift and go to state 17
    RETURN          reduce using rule 1 (empty -> .)

    args_opt                       shift and go to state 19
    empty                          shift and go to state 18

state 14

    (6) header -> WITH pkg . SEMICOLON
    (7) header -> WITH pkg . SEMICOLON USE pkg SEMICOLON
    (8) pkg -> pkg . DOT IDENT

    SEMICOLON       shift and go to state 20
    DOT             shift and go to state 21


state 15

    (9) pkg -> IDENT .

    SEMICOLON       reduce using rule 9 (pkg -> IDENT .)
    DOT             reduce using rule 9 (pkg -> IDENT .)


state 16

    (14) procedure -> PROC IDENT args_opt . IS declarations BEGIN statements END IDENT SEMICOLON

    IS              shift and go to state 22


state 17

    (15) args_opt -> LEFT_PAR . args RIGHT_PAR
    (17) args -> . args COMMA arg
    (18) args -> . arg
    (19) arg -> . IDENT COLON type

    IDENT           shift and go to state 25

    args                           shift and go to state 23
    arg                            shift and go to state 24

state 18

    (16) args_opt -> empty .

    IS              reduce using rule 16 (args_opt -> empty .)
    RETURN          reduce using rule 16 (args_opt -> empty .)


state 19

    (12) function -> FUNC IDENT args_opt . RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON

    RETURN          shift and go to state 26


state 20

    (6) header -> WITH pkg SEMICOLON .
    (7) header -> WITH pkg SEMICOLON . USE pkg SEMICOLON

    WITH            reduce using rule 6 (header -> WITH pkg SEMICOLON .)
    PROC            reduce using rule 6 (header -> WITH pkg SEMICOLON .)
    FUNC            reduce using rule 6 (header -> WITH pkg SEMICOLON .)
    USE             shift and go to state 27


state 21

    (8) pkg -> pkg DOT . IDENT

    IDENT           shift and go to state 28


state 22

    (14) procedure -> PROC IDENT args_opt IS . declarations BEGIN statements END IDENT SEMICOLON
    (23) declarations -> . declarations declaration
    (24) declarations -> . declaration
    (25) declaration -> . empty
    (26) declaration -> . function
    (27) declaration -> . procedure
    (28) declaration -> . IDENT COLON type ASSIGN value SEMICOLON
    (1) empty -> .
    (12) function -> . FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (14) procedure -> . PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON

  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for FUNC resolved as shift
  ! shift/reduce conflict for PROC resolved as shift
    IDENT           shift and go to state 29
    BEGIN           reduce using rule 1 (empty -> .)
    FUNC            shift and go to state 8
    PROC            shift and go to state 7

  ! IDENT           [ reduce using rule 1 (empty -> .) ]
  ! FUNC            [ reduce using rule 1 (empty -> .) ]
  ! PROC            [ reduce using rule 1 (empty -> .) ]

    declarations                   shift and go to state 30
    declaration                    shift and go to state 31
    empty                          shift and go to state 32
    function                       shift and go to state 33
    procedure                      shift and go to state 34

state 23

    (15) args_opt -> LEFT_PAR args . RIGHT_PAR
    (17) args -> args . COMMA arg

    RIGHT_PAR       shift and go to state 35
    COMMA           shift and go to state 36


state 24

    (18) args -> arg .

    RIGHT_PAR       reduce using rule 18 (args -> arg .)
    COMMA           reduce using rule 18 (args -> arg .)


state 25

    (19) arg -> IDENT . COLON type

    COLON           shift and go to state 37


state 26

    (12) function -> FUNC IDENT args_opt RETURN . type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (20) type -> . TYPE_INT
    (21) type -> . TYPE_FLOAT
    (22) type -> . TYPE_BOOL

    TYPE_INT        shift and go to state 39
    TYPE_FLOAT      shift and go to state 40
    TYPE_BOOL       shift and go to state 41

    type                           shift and go to state 38

state 27

    (7) header -> WITH pkg SEMICOLON USE . pkg SEMICOLON
    (8) pkg -> . pkg DOT IDENT
    (9) pkg -> . IDENT

    IDENT           shift and go to state 15

    pkg                            shift and go to state 42

state 28

    (8) pkg -> pkg DOT IDENT .

    SEMICOLON       reduce using rule 8 (pkg -> pkg DOT IDENT .)
    DOT             reduce using rule 8 (pkg -> pkg DOT IDENT .)


state 29

    (28) declaration -> IDENT . COLON type ASSIGN value SEMICOLON

    COLON           shift and go to state 43


state 30

    (14) procedure -> PROC IDENT args_opt IS declarations . BEGIN statements END IDENT SEMICOLON
    (23) declarations -> declarations . declaration
    (25) declaration -> . empty
    (26) declaration -> . function
    (27) declaration -> . procedure
    (28) declaration -> . IDENT COLON type ASSIGN value SEMICOLON
    (1) empty -> .
    (12) function -> . FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (14) procedure -> . PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON

  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for FUNC resolved as shift
  ! shift/reduce conflict for PROC resolved as shift
    BEGIN           shift and go to state 44
    IDENT           shift and go to state 29
    FUNC            shift and go to state 8
    PROC            shift and go to state 7

  ! BEGIN           [ reduce using rule 1 (empty -> .) ]
  ! IDENT           [ reduce using rule 1 (empty -> .) ]
  ! FUNC            [ reduce using rule 1 (empty -> .) ]
  ! PROC            [ reduce using rule 1 (empty -> .) ]

    declaration                    shift and go to state 45
    empty                          shift and go to state 32
    function                       shift and go to state 33
    procedure                      shift and go to state 34

state 31

    (24) declarations -> declaration .

    BEGIN           reduce using rule 24 (declarations -> declaration .)
    IDENT           reduce using rule 24 (declarations -> declaration .)
    FUNC            reduce using rule 24 (declarations -> declaration .)
    PROC            reduce using rule 24 (declarations -> declaration .)


state 32

    (25) declaration -> empty .

    BEGIN           reduce using rule 25 (declaration -> empty .)
    IDENT           reduce using rule 25 (declaration -> empty .)
    FUNC            reduce using rule 25 (declaration -> empty .)
    PROC            reduce using rule 25 (declaration -> empty .)


state 33

    (26) declaration -> function .

    BEGIN           reduce using rule 26 (declaration -> function .)
    IDENT           reduce using rule 26 (declaration -> function .)
    FUNC            reduce using rule 26 (declaration -> function .)
    PROC            reduce using rule 26 (declaration -> function .)


state 34

    (27) declaration -> procedure .

    BEGIN           reduce using rule 27 (declaration -> procedure .)
    IDENT           reduce using rule 27 (declaration -> procedure .)
    FUNC            reduce using rule 27 (declaration -> procedure .)
    PROC            reduce using rule 27 (declaration -> procedure .)


state 35

    (15) args_opt -> LEFT_PAR args RIGHT_PAR .

    IS              reduce using rule 15 (args_opt -> LEFT_PAR args RIGHT_PAR .)
    RETURN          reduce using rule 15 (args_opt -> LEFT_PAR args RIGHT_PAR .)


state 36

    (17) args -> args COMMA . arg
    (19) arg -> . IDENT COLON type

    IDENT           shift and go to state 25

    arg                            shift and go to state 46

state 37

    (19) arg -> IDENT COLON . type
    (20) type -> . TYPE_INT
    (21) type -> . TYPE_FLOAT
    (22) type -> . TYPE_BOOL

    TYPE_INT        shift and go to state 39
    TYPE_FLOAT      shift and go to state 40
    TYPE_BOOL       shift and go to state 41

    type                           shift and go to state 47

state 38

    (12) function -> FUNC IDENT args_opt RETURN type . IS declarations BEGIN ret_statements END IDENT SEMICOLON

    IS              shift and go to state 48


state 39

    (20) type -> TYPE_INT .

    IS              reduce using rule 20 (type -> TYPE_INT .)
    RIGHT_PAR       reduce using rule 20 (type -> TYPE_INT .)
    COMMA           reduce using rule 20 (type -> TYPE_INT .)
    ASSIGN          reduce using rule 20 (type -> TYPE_INT .)
    APOSTROPHE      reduce using rule 20 (type -> TYPE_INT .)


state 40

    (21) type -> TYPE_FLOAT .

    IS              reduce using rule 21 (type -> TYPE_FLOAT .)
    RIGHT_PAR       reduce using rule 21 (type -> TYPE_FLOAT .)
    COMMA           reduce using rule 21 (type -> TYPE_FLOAT .)
    ASSIGN          reduce using rule 21 (type -> TYPE_FLOAT .)
    APOSTROPHE      reduce using rule 21 (type -> TYPE_FLOAT .)


state 41

    (22) type -> TYPE_BOOL .

    IS              reduce using rule 22 (type -> TYPE_BOOL .)
    RIGHT_PAR       reduce using rule 22 (type -> TYPE_BOOL .)
    COMMA           reduce using rule 22 (type -> TYPE_BOOL .)
    ASSIGN          reduce using rule 22 (type -> TYPE_BOOL .)
    APOSTROPHE      reduce using rule 22 (type -> TYPE_BOOL .)


state 42

    (7) header -> WITH pkg SEMICOLON USE pkg . SEMICOLON
    (8) pkg -> pkg . DOT IDENT

    SEMICOLON       shift and go to state 49
    DOT             shift and go to state 21


state 43

    (28) declaration -> IDENT COLON . type ASSIGN value SEMICOLON
    (20) type -> . TYPE_INT
    (21) type -> . TYPE_FLOAT
    (22) type -> . TYPE_BOOL

    TYPE_INT        shift and go to state 39
    TYPE_FLOAT      shift and go to state 40
    TYPE_BOOL       shift and go to state 41

    type                           shift and go to state 50

state 44

    (14) procedure -> PROC IDENT args_opt IS declarations BEGIN . statements END IDENT SEMICOLON
    (58) statements -> . statements statement
    (59) statements -> . statement
    (60) statement -> . assign
    (61) statement -> . if
    (62) statement -> . loop
    (63) statement -> . put_line
    (64) statement -> . function_call SEMICOLON
    (69) assign -> . IDENT ASSIGN value SEMICOLON
    (70) if -> . IF bool_expr THEN ret_statements elsifs else END IF SEMICOLON
    (76) loop -> . loop_body
    (77) loop -> . for_range loop_body
    (78) loop -> . while loop_body
    (82) put_line -> . PUT_LINE LEFT_PAR str_expr RIGHT_PAR SEMICOLON
    (13) function_call -> . IDENT LEFT_PAR value RIGHT_PAR
    (79) loop_body -> . LOOP statements END LOOP SEMICOLON
    (80) for_range -> . FOR IDENT IN expr DUB_DOT expr
    (81) while -> . WHILE bool_expr

    IDENT           shift and go to state 51
    IF              shift and go to state 59
    PUT_LINE        shift and go to state 63
    LOOP            shift and go to state 64
    FOR             shift and go to state 65
    WHILE           shift and go to state 66

    statements                     shift and go to state 52
    statement                      shift and go to state 53
    assign                         shift and go to state 54
    if                             shift and go to state 55
    loop                           shift and go to state 56
    put_line                       shift and go to state 57
    function_call                  shift and go to state 58
    loop_body                      shift and go to state 60
    for_range                      shift and go to state 61
    while                          shift and go to state 62

state 45

    (23) declarations -> declarations declaration .

    BEGIN           reduce using rule 23 (declarations -> declarations declaration .)
    IDENT           reduce using rule 23 (declarations -> declarations declaration .)
    FUNC            reduce using rule 23 (declarations -> declarations declaration .)
    PROC            reduce using rule 23 (declarations -> declarations declaration .)


state 46

    (17) args -> args COMMA arg .

    RIGHT_PAR       reduce using rule 17 (args -> args COMMA arg .)
    COMMA           reduce using rule 17 (args -> args COMMA arg .)


state 47

    (19) arg -> IDENT COLON type .

    RIGHT_PAR       reduce using rule 19 (arg -> IDENT COLON type .)
    COMMA           reduce using rule 19 (arg -> IDENT COLON type .)


state 48

    (12) function -> FUNC IDENT args_opt RETURN type IS . declarations BEGIN ret_statements END IDENT SEMICOLON
    (23) declarations -> . declarations declaration
    (24) declarations -> . declaration
    (25) declaration -> . empty
    (26) declaration -> . function
    (27) declaration -> . procedure
    (28) declaration -> . IDENT COLON type ASSIGN value SEMICOLON
    (1) empty -> .
    (12) function -> . FUNC IDENT args_opt RETURN type IS declarations BEGIN ret_statements END IDENT SEMICOLON
    (14) procedure -> . PROC IDENT args_opt IS declarations BEGIN statements END IDENT SEMICOLON

  ! shift/reduce conflict for IDENT resolved as shift
  ! shift/reduce conflict for FUNC resolved as shift
  ! shift/reduce conflict for PROC resolved as shift
    IDENT           shift and go to state 29
    BEGIN           reduce using rule 1 (empty -> .)
    FUNC            shift and go to state 8
    PROC            shift and go to state 7

  ! IDENT           [ reduce using rule 1 (empty -> .) ]
  ! FUNC            [ reduce using rule 1 (empty -> .) ]
  ! PROC            [ reduce using rule 1 (empty -> .) ]

    declarations                   shift and go to state 67
    declaration                    shift and go to state 31
    empty                          shift and go to state 32
    function                       shift and go to state 33
    procedure                      shift and go to state 34

state 49

    (7) header -> WITH pkg SEMICOLON USE pkg SEMICOLON .

    WITH            reduce using rule 7 (header -> WITH pkg SEMICOLON USE pkg SEMICOLON .)
    PROC            reduce using rule 7 (header -> WITH pkg SEMICOLON USE pkg SEMICOLON .)
    FUNC            reduce using rule 7 (header -> WITH pkg SEMICOLON USE pkg SEMICOLON .)


state 50

    (28) declaration -> IDENT COLON type . ASSIGN value SEMICOLON

    ASSIGN          shift and go to state 68


state 51

    (69) assign -> IDENT . ASSIGN value SEMICOLON
    (13) function_call -> IDENT . LEFT_PAR value RIGHT_PAR

    ASSIGN          shift and go to state 69
    LEFT_PAR        shift and go to state 70


state 52

    (14) procedure -> PROC IDENT args_opt IS declarations BEGIN statements . END IDENT SEMICOLON
    (58) statements -> statements . statement
    (60) statement -> . assign
    (61) statement -> . if
    (62) statement -> . loop
    (63) statement -> . put_line
    (64) statement -> . function_call SEMICOLON
    (69) assign -> . IDENT ASSIGN value SEMICOLON
    (70) if -> . IF bool_expr THEN ret_statements elsifs else END IF SEMICOLON
    (76) loop -> . loop_body
    (77) loop -> . for_range loop_body
    (78) loop -> . while loop_body
    (82) put_line -> . PUT_LINE LEFT_PAR str_expr RIGHT_PAR SEMICOLON
    (13) function_call -> . IDENT LEFT_PAR value RIGHT_PAR
    (79) loop_body -> . LOOP statements END LOOP SEMICOLON
    (80) for_range -> . FOR IDENT IN expr DUB_DOT expr
    (81) while -> . WHILE bool_expr

    END             shift and go to state 71
    IDENT           shift and go to state 51
    IF              shift and go to state 59
    PUT_LINE        shift and go to state 63
    LOOP            shift and go to state 64
    FOR             shift and go to state 65
    WHILE           shift and go to state 66

    statement                      shift and go to state 72
    assign                         shift and go to state 54
    if                             shift and go to state 55
    loop                           shift and go to state 56
    put_line                       shift and go to state 57
    function_call                  shift and go to state 58
    loop_body                      shift and go to state 60
    for_range                      shift and go to state 61
    while                          shift and go to state 62

state 53

    (59) statements -> statement .

    END             reduce using rule 59 (statements -> statement .)
    IDENT           reduce using rule 59 (statements -> statement .)
    IF              reduce using rule 59 (statements -> statement .)
    PUT_LINE        reduce using rule 59 (statements -> statement .)
    LOOP            reduce using rule 59 (statements -> statement .)
    FOR             reduce using rule 59 (statements -> statement .)
    WHILE           reduce using rule 59 (statements -> statement .)


state 54

    (60) statement -> assign .

    END             reduce using rule 60 (statement -> assign .)
    IDENT           reduce using rule 60 (statement -> assign .)
    IF              reduce using rule 60 (statement -> assign .)
    PUT_LINE        reduce using rule 60 (statement -> assign .)
    LOOP            reduce using rule 60 (statement -> assign .)
    FOR             reduce using rule 60 (statement -> assign .)
    WHILE           reduce using rule 60 (statement -> assign .)
    RETURN          reduce using rule 60 (statement -> assign .)
    ELSE            reduce using rule 60 (statement -> assign .)
    ELSIF           reduce using rule 60 (statement -> assign .)


state 55

    (61) statement -> if .

    END             reduce using rule 61 (statement -> if .)
    IDENT           reduce using rule 61 (statement -> if .)
    IF              reduce using rule 61 (statement -> if .)
    PUT_LINE        reduce using rule 61 (statement -> if .)
    LOOP            reduce using rule 61 (statement -> if .)
    FOR             reduce using rule 61 (statement -> if .)
    WHILE           reduce using rule 61 (statement -> if .)
    RETURN          reduce using rule 61 (statement -> if .)
    ELSE            reduce using rule 61 (statement -> if .)
    ELSIF           reduce using rule 61 (statement -> if .)


state 56

    (62) statement -> loop .

    END             reduce using rule 62 (statement -> loop .)
    IDENT           reduce using rule 62 (statement -> loop .)
    IF              reduce using rule 62 (statement -> loop .)
    PUT_LINE        reduce using rule 62 (statement -> loop .)
    LOOP            reduce using rule 62 (statement -> loop .)
    FOR             reduce using rule 62 (statement -> loop .)
    WHILE           reduce using rule 62 (statement -> loop .)
    RETURN          reduce using rule 62 (statement -> loop .)
    ELSE            reduce using rule 62 (statement -> loop .)
    ELSIF           reduce using rule 62 (statement -> loop .)


state 57

    (63) statement -> put_line .

    END             reduce using rule 63 (statement -> put_line .)
    IDENT           reduce using rule 63 (statement -> put_line .)
    IF              reduce using rule 63 (statement -> put_line .)
    PUT_LINE        reduce using rule 63 (statement -> put_line .)
    LOOP            reduce using rule 63 (statement -> put_line .)
    FOR             reduce using rule 63 (statement -> put_line .)
    WHILE           reduce using rule 63 (statement -> put_line .)
    RETURN          reduce using rule 63 (statement -> put_line .)
    ELSE            reduce using rule 63 (statement -> put_line .)
    ELSIF           reduce using rule 63 (statement -> put_line .)


state 58

    (64) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 73


state 59

    (70) if -> IF . bool_expr THEN ret_statements elsifs else END IF SEMICOLON
    (41) bool_expr -> . bool_term AND bool_term
    (42) bool_expr -> . bool_term OR bool_term
    (43) bool_expr -> . bool_term
    (44) bool_term -> . NOT bool
    (45) bool_term -> . bool
    (46) bool -> . LEFT_PAR bool_expr RIGHT_PAR
    (47) bool -> . BOOL_VAL
    (48) bool -> . IDENT
    (49) bool -> . rel_operand rel_operator rel_operand
    (50) rel_operand -> . NUMBER
    (51) rel_operand -> . IDENT

    NOT             shift and go to state 76
    LEFT_PAR        shift and go to state 78
    BOOL_VAL        shift and go to state 79
    IDENT           shift and go to state 80
    NUMBER          shift and go to state 82

    bool_expr                      shift and go to state 74
    bool_term                      shift and go to state 75
    bool                           shift and go to state 77
    rel_operand                    shift and go to state 81

state 60

    (76) loop -> loop_body .

    END             reduce using rule 76 (loop -> loop_body .)
    IDENT           reduce using rule 76 (loop -> loop_body .)
    IF              reduce using rule 76 (loop -> loop_body .)
    PUT_LINE        reduce using rule 76 (loop -> loop_body .)
    LOOP            reduce using rule 76 (loop -> loop_body .)
    FOR             reduce using rule 76 (loop -> loop_body .)
    WHILE           reduce using rule 76 (loop -> loop_body .)
    RETURN          reduce using rule 76 (loop -> loop_body .)
    ELSE            reduce using rule 76 (loop -> loop_body .)
    ELSIF           reduce using rule 76 (loop -> loop_body .)


state 61

    (77) loop -> for_range . loop_body
    (79) loop_body -> . LOOP statements END LOOP SEMICOLON

    LOOP            shift and go to state 64

    loop_body                      shift and go to state 83

state 62

    (78) loop -> while . loop_body
    (79) loop_body -> . LOOP statements END LOOP SEMICOLON

    LOOP            shift and go to state 64

    loop_body                      shift and go to state 84

state 63

    (82) put_line -> PUT_LINE . LEFT_PAR str_expr RIGHT_PAR SEMICOLON

    LEFT_PAR        shift and go to state 85


state 64

    (79) loop_body -> LOOP . statements END LOOP SEMICOLON
    (58) statements -> . statements statement
    (59) statements -> . statement
    (60) statement -> . assign
    (61) statement -> . if
    (62) statement -> . loop
    (63) statement -> . put_line
    (64) statement -> . function_call SEMICOLON
    (69) assign -> . IDENT ASSIGN value SEMICOLON
    (70) if -> . IF bool_expr THEN ret_statements elsifs else END IF SEMICOLON
    (76) loop -> . loop_body
    (77) loop -> . for_range loop_body
    (78) loop -> . while loop_body
    (82) put_line -> . PUT_LINE LEFT_PAR str_expr RIGHT_PAR SEMICOLON
    (13) function_call -> . IDENT LEFT_PAR value RIGHT_PAR
    (79) loop_body -> . LOOP statements END LOOP SEMICOLON
    (80) for_range -> . FOR IDENT IN expr DUB_DOT expr
    (81) while -> . WHILE bool_expr

    IDENT           shift and go to state 51
    IF              shift and go to state 59
    PUT_LINE        shift and go to state 63
    LOOP            shift and go to state 64
    FOR             shift and go to state 65
    WHILE           shift and go to state 66

    statements                     shift and go to state 86
    statement                      shift and go to state 53
    assign                         shift and go to state 54
    if                             shift and go to state 55
    loop                           shift and go to state 56
    put_line                       shift and go to state 57
    function_call                  shift and go to state 58
    loop_body                      shift and go to state 60
    for_range                      shift and go to state 61
    while                          shift and go to state 62

state 65

    (80) for_range -> FOR . IDENT IN expr DUB_DOT expr

    IDENT           shift and go to state 87


state 66

    (81) while -> WHILE . bool_expr
    (41) bool_expr -> . bool_term AND bool_term
    (42) bool_expr -> . bool_term OR bool_term
    (43) bool_expr -> . bool_term
    (44) bool_term -> . NOT bool
    (45) bool_term -> . bool
    (46) bool -> . LEFT_PAR bool_expr RIGHT_PAR
    (47) bool -> . BOOL_VAL
    (48) bool -> . IDENT
    (49) bool -> . rel_operand rel_operator rel_operand
    (50) rel_operand -> . NUMBER
    (51) rel_operand -> . IDENT

    NOT             shift and go to state 76
    LEFT_PAR        shift and go to state 78
    BOOL_VAL        shift and go to state 79
    IDENT           shift and go to state 80
    NUMBER          shift and go to state 82
